# image-segmentation-demo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
deploy/: Caddyfile
docs/: deploy.md  sam3-recipe.md  scaling.md  test-on-aws.md
src/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
src/api/alembic/: env.py
src/api/alembic/versions/: 0001_initial.py  0002_add_error.py
src/api/app/: config.py  db.py  events.py  main.py  messaging.py  models.py  schemas.py  storage.py
src/api/app/routes/: health.py  images.py
src/api/tests/: conftest.py  test_images.py  test_storage.py
src/segmentation_worker/: .dockerignore  Dockerfile  pyproject.toml
src/segmentation_worker/tests/: conftest.py  test_fanout.py  test_overlay.py  test_processing.py  test_worker.py
src/segmentation_worker/worker/: config.py  messaging.py  processing.py  segmentation.py  storage.py  worker.py
src/web/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/web/src/: App.tsx  format.ts  styles.css  types.ts
src/web/src/api/: client.ts
src/web/src/components/: HistoryList.tsx  ImageDetailView.tsx  StatusBadge.tsx  UploadForm.tsx
src/web/src/test/: HistoryList.test.tsx  ImageDetailView.test.tsx  UploadForm.test.tsx  client.test.ts  factory.ts  setup.ts
