[project]
name = "segdemo-worker"
version = "0.1.0"
description = "Image segmentation demo — segmentation worker (M2 fake processing)"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.6",
    "boto3>=1.34",
    "structlog>=24.1",
    "Pillow>=10.3",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
